CREATE TABLE IF NOT EXISTS "__EFMigrationsHistory" (
    "MigrationId" character varying(150) NOT NULL,
    "ProductVersion" character varying(32) NOT NULL,
    CONSTRAINT "PK___EFMigrationsHistory" PRIMARY KEY ("MigrationId")
);

START TRANSACTION;
CREATE TABLE "AUDITORIA" (
    id bigint GENERATED BY DEFAULT AS IDENTITY,
    codigo character varying(50) NOT NULL,
    id_relacionado integer,
    tabla_relacionada character varying(50),
    usuario_id uuid,
    ip character varying(45),
    detalles jsonb,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    CONSTRAINT "PK_AUDITORIA" PRIMARY KEY (id)
);

CREATE TABLE "CATALOGO_SUGERENCIA" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    campo character varying(50) NOT NULL,
    valor character varying(200) NOT NULL,
    orden integer NOT NULL DEFAULT 0,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    usuario_id uuid NOT NULL,
    activo boolean NOT NULL DEFAULT TRUE,
    CONSTRAINT "PK_CATALOGO_SUGERENCIA" PRIMARY KEY (id)
);

CREATE TABLE "CONFIGURACION_IA" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "UpdatedAt" timestamp with time zone,
    "Proveedor" character varying(50) NOT NULL,
    "ApiKey" character varying(500),
    "Modelo" character varying(100) NOT NULL,
    "Endpoint" character varying(500),
    "AzureEndpoint" character varying(500),
    "AzureApiVersion" character varying(50),
    "LocalEndpoint" character varying(500),
    "MaxTokens" integer NOT NULL DEFAULT 1000,
    "Temperature" double precision NOT NULL DEFAULT 0.69999999999999996,
    "MaxReportesParaNarrativa" integer NOT NULL,
    "Activo" boolean NOT NULL DEFAULT TRUE,
    "ModificadoPorId" uuid,
    "CreatedAt" timestamp with time zone NOT NULL DEFAULT (CURRENT_TIMESTAMP),
    CONSTRAINT "PK_CONFIGURACION_IA" PRIMARY KEY ("Id")
);

CREATE TABLE "MODELO_REPORTE" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    nombre character varying(100) NOT NULL,
    descripcion character varying(500),
    contenido_markdown text NOT NULL,
    activo boolean NOT NULL DEFAULT TRUE,
    es_default boolean NOT NULL DEFAULT FALSE,
    updated_at timestamptz,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    usuario_id uuid NOT NULL,
    CONSTRAINT "PK_MODELO_REPORTE" PRIMARY KEY (id)
);

CREATE TABLE "ROL" (
    "Id" uuid NOT NULL,
    "Name" character varying(256),
    "NormalizedName" character varying(256),
    "ConcurrencyStamp" text,
    CONSTRAINT "PK_ROL" PRIMARY KEY ("Id")
);

CREATE TABLE "USUARIO" (
    "Id" uuid NOT NULL,
    "UserName" character varying(256),
    "NormalizedUserName" character varying(256),
    "Email" character varying(256),
    "NormalizedEmail" character varying(256),
    "EmailConfirmed" boolean NOT NULL,
    "PasswordHash" text,
    "SecurityStamp" text,
    "ConcurrencyStamp" text,
    "PhoneNumber" text,
    "PhoneNumberConfirmed" boolean NOT NULL,
    "TwoFactorEnabled" boolean NOT NULL,
    "LockoutEnd" timestamp with time zone,
    "LockoutEnabled" boolean NOT NULL,
    "AccessFailedCount" integer NOT NULL,
    CONSTRAINT "PK_USUARIO" PRIMARY KEY ("Id")
);

CREATE TABLE "ZONA" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    nombre character varying(100) NOT NULL,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    usuario_id uuid NOT NULL,
    activo boolean NOT NULL DEFAULT TRUE,
    CONSTRAINT "PK_ZONA" PRIMARY KEY (id)
);

CREATE TABLE "REPORTE_AUTOMATIZADO" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    fecha_inicio timestamptz NOT NULL,
    fecha_fin timestamptz NOT NULL,
    contenido_markdown text NOT NULL,
    contenido_word_path character varying(500),
    estadisticas jsonb NOT NULL DEFAULT '{}',
    enviado boolean NOT NULL DEFAULT FALSE,
    fecha_envio timestamptz,
    error_mensaje text,
    modelo_reporte_id integer,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    CONSTRAINT "PK_REPORTE_AUTOMATIZADO" PRIMARY KEY (id),
    CONSTRAINT "modelo_reporte_id_FK" FOREIGN KEY (modelo_reporte_id) REFERENCES "MODELO_REPORTE" (id) ON DELETE SET NULL
);

CREATE TABLE "ROL_CLAIM" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "RoleId" uuid NOT NULL,
    "ClaimType" text,
    "ClaimValue" text,
    CONSTRAINT "PK_ROL_CLAIM" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_ROL_CLAIM_ROL_RoleId" FOREIGN KEY ("RoleId") REFERENCES "ROL" ("Id") ON DELETE CASCADE
);

CREATE TABLE configuracion_email (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    proveedor character varying(50) NOT NULL,
    habilitado boolean NOT NULL DEFAULT FALSE,
    smtp_host character varying(255),
    smtp_port integer,
    smtp_username character varying(255),
    smtp_password character varying(500),
    smtp_use_ssl boolean NOT NULL DEFAULT TRUE,
    sendgrid_api_key character varying(500),
    mailgun_api_key character varying(500),
    mailgun_domain character varying(255),
    mailgun_region character varying(10),
    from_email character varying(255) NOT NULL,
    from_name character varying(255) NOT NULL,
    last_tested_at timestamptz,
    last_test_success boolean,
    last_test_error character varying(1000),
    updated_at timestamptz,
    created_at timestamptz NOT NULL,
    usuario_id uuid NOT NULL,
    CONSTRAINT "PK_configuracion_email" PRIMARY KEY (id),
    CONSTRAINT "FK_configuracion_email_USUARIO_usuario_id" FOREIGN KEY (usuario_id) REFERENCES "USUARIO" ("Id") ON DELETE RESTRICT
);

CREATE TABLE "CONFIGURACION_REPORTES_AUTOMATIZADOS" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    habilitado boolean NOT NULL DEFAULT FALSE,
    hora_generacion interval NOT NULL DEFAULT INTERVAL '06:00:00',
    destinatarios character varying(2000) NOT NULL DEFAULT '',
    ruta_salida character varying(500) NOT NULL DEFAULT './generated-reports',
    updated_at timestamp with time zone,
    created_at timestamp with time zone NOT NULL DEFAULT (now()),
    usuario_id uuid NOT NULL,
    CONSTRAINT "PK_CONFIGURACION_REPORTES_AUTOMATIZADOS" PRIMARY KEY (id),
    CONSTRAINT "FK_CONFIGURACION_REPORTES_AUTOMATIZADOS_USUARIO_usuario_id" FOREIGN KEY (usuario_id) REFERENCES "USUARIO" ("Id") ON DELETE RESTRICT
);

CREATE TABLE "USUARIO_CLAIM" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "UserId" uuid NOT NULL,
    "ClaimType" text,
    "ClaimValue" text,
    CONSTRAINT "PK_USUARIO_CLAIM" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_USUARIO_CLAIM_USUARIO_UserId" FOREIGN KEY ("UserId") REFERENCES "USUARIO" ("Id") ON DELETE CASCADE
);

CREATE TABLE "USUARIO_LOGIN" (
    "LoginProvider" text NOT NULL,
    "ProviderKey" text NOT NULL,
    "ProviderDisplayName" text,
    "UserId" uuid NOT NULL,
    CONSTRAINT "PK_USUARIO_LOGIN" PRIMARY KEY ("LoginProvider", "ProviderKey"),
    CONSTRAINT "FK_USUARIO_LOGIN_USUARIO_UserId" FOREIGN KEY ("UserId") REFERENCES "USUARIO" ("Id") ON DELETE CASCADE
);

CREATE TABLE "USUARIO_ROL" (
    "UserId" uuid NOT NULL,
    "RoleId" uuid NOT NULL,
    CONSTRAINT "PK_USUARIO_ROL" PRIMARY KEY ("UserId", "RoleId"),
    CONSTRAINT "FK_USUARIO_ROL_ROL_RoleId" FOREIGN KEY ("RoleId") REFERENCES "ROL" ("Id") ON DELETE CASCADE,
    CONSTRAINT "FK_USUARIO_ROL_USUARIO_UserId" FOREIGN KEY ("UserId") REFERENCES "USUARIO" ("Id") ON DELETE CASCADE
);

CREATE TABLE "USUARIO_TOKEN" (
    "UserId" uuid NOT NULL,
    "LoginProvider" text NOT NULL,
    "Name" text NOT NULL,
    "Value" text,
    CONSTRAINT "PK_USUARIO_TOKEN" PRIMARY KEY ("UserId", "LoginProvider", "Name"),
    CONSTRAINT "FK_USUARIO_TOKEN_USUARIO_UserId" FOREIGN KEY ("UserId") REFERENCES "USUARIO" ("Id") ON DELETE CASCADE
);

CREATE TABLE "REGION" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    nombre character varying(100) NOT NULL,
    zona_id integer NOT NULL,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    usuario_id uuid NOT NULL,
    activo boolean NOT NULL DEFAULT TRUE,
    CONSTRAINT "PK_REGION" PRIMARY KEY (id),
    CONSTRAINT "zona_id_FK" FOREIGN KEY (zona_id) REFERENCES "ZONA" (id) ON DELETE RESTRICT
);

CREATE TABLE "SECTOR" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    nombre character varying(100) NOT NULL,
    region_id integer NOT NULL,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    usuario_id uuid NOT NULL,
    activo boolean NOT NULL DEFAULT TRUE,
    CONSTRAINT "PK_SECTOR" PRIMARY KEY (id),
    CONSTRAINT "sector_region_id_FK" FOREIGN KEY (region_id) REFERENCES "REGION" (id) ON DELETE RESTRICT
);

CREATE TABLE "CUADRANTE" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    nombre character varying(100) NOT NULL,
    sector_id integer NOT NULL,
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    usuario_id uuid NOT NULL,
    activo boolean NOT NULL DEFAULT TRUE,
    CONSTRAINT "PK_CUADRANTE" PRIMARY KEY (id),
    CONSTRAINT "sector_id_FK" FOREIGN KEY (sector_id) REFERENCES "SECTOR" (id) ON DELETE RESTRICT
);

CREATE TABLE "REPORTE_INCIDENCIA" (
    id integer GENERATED BY DEFAULT AS IDENTITY,
    tipo_reporte character varying(10) NOT NULL DEFAULT 'A',
    estado smallint NOT NULL DEFAULT 0,
    datetime_hechos timestamptz NOT NULL,
    sexo character varying(50) NOT NULL,
    edad integer NOT NULL,
    lgbtttiq_plus boolean NOT NULL DEFAULT FALSE,
    situacion_calle boolean NOT NULL DEFAULT FALSE,
    migrante boolean NOT NULL DEFAULT FALSE,
    discapacidad boolean NOT NULL DEFAULT FALSE,
    delito character varying(100) NOT NULL,
    zona_id integer NOT NULL,
    region_id integer NOT NULL,
    sector_id integer NOT NULL,
    cuadrante_id integer NOT NULL,
    turno_ceiba character varying(100) NOT NULL,
    tipo_de_atencion character varying(100) NOT NULL,
    tipo_de_accion character varying(500) NOT NULL,
    hechos_reportados text NOT NULL,
    acciones_realizadas text NOT NULL,
    traslados character varying(100) NOT NULL,
    observaciones text,
    updated_at timestamptz,
    campos_adicionales jsonb,
    schema_version character varying(10) NOT NULL DEFAULT '1.0',
    created_at timestamptz NOT NULL DEFAULT (NOW()),
    usuario_id uuid NOT NULL,
    CONSTRAINT "PK_REPORTE_INCIDENCIA" PRIMARY KEY (id),
    CONSTRAINT "CK_REPORTE_EDAD" CHECK (edad > 0 AND edad < 150),
    CONSTRAINT "CK_REPORTE_ESTADO" CHECK (estado IN (0, 1)),
    CONSTRAINT "FK_REPORTE_CUADRANTE" FOREIGN KEY (cuadrante_id) REFERENCES "CUADRANTE" (id) ON DELETE RESTRICT,
    CONSTRAINT "FK_REPORTE_REGION" FOREIGN KEY (region_id) REFERENCES "REGION" (id) ON DELETE RESTRICT,
    CONSTRAINT "FK_REPORTE_SECTOR" FOREIGN KEY (sector_id) REFERENCES "SECTOR" (id) ON DELETE RESTRICT,
    CONSTRAINT "FK_REPORTE_ZONA" FOREIGN KEY (zona_id) REFERENCES "ZONA" (id) ON DELETE RESTRICT
);

CREATE INDEX idx_auditoria_codigo ON "AUDITORIA" (codigo);

CREATE INDEX idx_auditoria_codigo_fecha ON "AUDITORIA" (codigo, created_at DESC);

CREATE INDEX idx_auditoria_entidad ON "AUDITORIA" (tabla_relacionada, id_relacionado);

CREATE INDEX idx_auditoria_fecha ON "AUDITORIA" (created_at);

CREATE INDEX idx_auditoria_fecha_usuario ON "AUDITORIA" (created_at DESC, usuario_id);

CREATE INDEX idx_auditoria_ip ON "AUDITORIA" (ip);

CREATE INDEX idx_auditoria_usuario ON "AUDITORIA" (usuario_id);

CREATE INDEX idx_sugerencia_campo_activo ON "CATALOGO_SUGERENCIA" (campo, activo);

CREATE UNIQUE INDEX idx_sugerencia_campo_valor_unique ON "CATALOGO_SUGERENCIA" (campo, valor);

CREATE INDEX ix_configuracion_email_created_at ON configuracion_email (created_at);

CREATE INDEX ix_configuracion_email_habilitado ON configuracion_email (habilitado);

CREATE INDEX ix_configuracion_email_proveedor ON configuracion_email (proveedor);

CREATE INDEX "IX_configuracion_email_usuario_id" ON configuracion_email (usuario_id);

CREATE INDEX "IX_CONFIGURACION_IA_ACTIVO" ON "CONFIGURACION_IA" ("Activo");

CREATE INDEX idx_config_reportes_habilitado ON "CONFIGURACION_REPORTES_AUTOMATIZADOS" (habilitado);

CREATE INDEX "IX_CONFIGURACION_REPORTES_AUTOMATIZADOS_usuario_id" ON "CONFIGURACION_REPORTES_AUTOMATIZADOS" (usuario_id);

CREATE INDEX idx_cuadrante_activo ON "CUADRANTE" (activo);

CREATE UNIQUE INDEX idx_cuadrante_sector_nombre_unique ON "CUADRANTE" (sector_id, nombre);

CREATE INDEX idx_modelo_activo ON "MODELO_REPORTE" (activo);

CREATE INDEX idx_modelo_default ON "MODELO_REPORTE" (es_default);

CREATE UNIQUE INDEX idx_modelo_nombre_unique ON "MODELO_REPORTE" (nombre);

CREATE INDEX idx_region_activo ON "REGION" (activo);

CREATE INDEX idx_region_zona ON "REGION" (zona_id);

CREATE UNIQUE INDEX idx_region_zona_nombre_unique ON "REGION" (zona_id, nombre);

CREATE INDEX idx_reporte_auto_created ON "REPORTE_AUTOMATIZADO" (created_at DESC);

CREATE INDEX idx_reporte_auto_enviado ON "REPORTE_AUTOMATIZADO" (enviado);

CREATE INDEX idx_reporte_auto_fecha_inicio ON "REPORTE_AUTOMATIZADO" (fecha_inicio);

CREATE INDEX "IX_REPORTE_AUTOMATIZADO_modelo_reporte_id" ON "REPORTE_AUTOMATIZADO" (modelo_reporte_id);

CREATE INDEX idx_reporte_composite_revisor ON "REPORTE_INCIDENCIA" (created_at DESC, estado, delito);

CREATE INDEX idx_reporte_composite_search ON "REPORTE_INCIDENCIA" (estado, zona_id, created_at DESC);

CREATE INDEX idx_reporte_cuadrante_fecha ON "REPORTE_INCIDENCIA" (cuadrante_id, created_at DESC);

CREATE INDEX idx_reporte_datetime_hechos ON "REPORTE_INCIDENCIA" (datetime_hechos);

CREATE INDEX idx_reporte_delito ON "REPORTE_INCIDENCIA" (delito);

CREATE INDEX idx_reporte_estado ON "REPORTE_INCIDENCIA" (estado);

CREATE INDEX idx_reporte_fecha ON "REPORTE_INCIDENCIA" (created_at DESC);

CREATE INDEX idx_reporte_region ON "REPORTE_INCIDENCIA" (region_id);

CREATE INDEX idx_reporte_sector_fecha ON "REPORTE_INCIDENCIA" (sector_id, created_at DESC);

CREATE INDEX idx_reporte_usuario ON "REPORTE_INCIDENCIA" (usuario_id);

CREATE INDEX idx_reporte_usuario_estado ON "REPORTE_INCIDENCIA" (usuario_id, estado, created_at DESC);

CREATE INDEX idx_reporte_zona ON "REPORTE_INCIDENCIA" (zona_id);

CREATE UNIQUE INDEX "RoleNameIndex" ON "ROL" ("NormalizedName");

CREATE INDEX "IX_ROL_CLAIM_RoleId" ON "ROL_CLAIM" ("RoleId");

CREATE INDEX idx_sector_activo ON "SECTOR" (activo);

CREATE INDEX idx_sector_region ON "SECTOR" (region_id);

CREATE UNIQUE INDEX idx_sector_region_nombre_unique ON "SECTOR" (region_id, nombre);

CREATE INDEX "EmailIndex" ON "USUARIO" ("NormalizedEmail");

CREATE UNIQUE INDEX "UserNameIndex" ON "USUARIO" ("NormalizedUserName");

CREATE INDEX "IX_USUARIO_CLAIM_UserId" ON "USUARIO_CLAIM" ("UserId");

CREATE INDEX "IX_USUARIO_LOGIN_UserId" ON "USUARIO_LOGIN" ("UserId");

CREATE INDEX "IX_USUARIO_ROL_RoleId" ON "USUARIO_ROL" ("RoleId");

CREATE INDEX idx_zona_activo ON "ZONA" (activo);

CREATE UNIQUE INDEX idx_zona_nombre_unique ON "ZONA" (nombre);

INSERT INTO "__EFMigrationsHistory" ("MigrationId", "ProductVersion")
VALUES ('20251217033545_Initial', '10.0.0');

COMMIT;

